--- a/system/get_empleado.xaml
+++ b/system/get_empleado.xaml
@@ -2,7 +2,8 @@
   <x:Members>
     <x:Property Name="in_connection_db" Type="InArgument(ui:DatabaseConnection)" />
     <x:Property Name="in_empleado" Type="InArgument(x:String)" />
-    <x:Property Name="out_detallesEmpleado" Type="InArgument(sd:DataTable)" />
+    <x:Property Name="out_detallesEmpleado" Type="OutArgument(sd:DataTable)" />
+    <x:Property Name="in_empleadoApellido" Type="InArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
@@ -70,7 +71,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DataTable="[out_detallesEmpleado]" DisplayName="Execute Query" ExistingDbConnection="[in_connection_db]" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;SELECT * FROM ARPLME WHERE NO_CIA = '01' AND NO_EMPLE = '&quot;+in_empleado.ToString+&quot;';&quot;]">
+    <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DataTable="[out_detallesEmpleado]" DisplayName="Execute Query" ExistingDbConnection="[in_connection_db]" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;Select * From ARPLME Where NO_CIA = '01' And nombre Like '%&quot;+in_empleado.ToString+&quot;%' And nombre Like '%&quot;+in_empleadoApellido.ToString+&quot;%' And Estado = 'A'&quot;]">
       <ui:ExecuteQuery.Parameters>
         <scg:Dictionary x:TypeArguments="x:String, Argument" />
       </ui:ExecuteQuery.Parameters>
