Insert de encabezados

--- a/system/insert_encabezado.xaml
+++ b/system/insert_encabezado.xaml
@@ -1,11 +1,17 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="insert_encabezado" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="in_connection_db" Type="InArgument(ui:DatabaseConnection)" />
+    <x:Property Name="in_pNO_CIA" Type="InArgument(x:String)" />
+    <x:Property Name="in_NO_EMPLE" Type="InArgument(x:String)" />
+    <x:Property Name="in_AREA" Type="InArgument(x:String)" />
+    <x:Property Name="in_DEPTO" Type="InArgument(x:String)" />
+    <x:Property Name="in_DIVISION" Type="InArgument(x:String)" />
+    <x:Property Name="in_CENTRO_COSTOS" Type="InArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1012,726</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1012,619</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>insert_encabezado_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -52,6 +58,11 @@
       <AssemblyReference>UiPath.System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.UiAutomation.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Database</AssemblyReference>
+      <AssemblyReference>System.ValueTuple</AssemblyReference>
+      <AssemblyReference>UiPath.Excel</AssemblyReference>
+      <AssemblyReference>UiPath.Mail</AssemblyReference>
+      <AssemblyReference>UiPath.CV</AssemblyReference>
+      <AssemblyReference>System.ServiceModel</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="insert_encabezado" sap:VirtualizedContainerService.HintSize="376,180" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -60,7 +71,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:ExecuteQuery ContinueOnError="{x:Null}" DataTable="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DisplayName="Execute Query" ExistingDbConnection="[in_connection_db]" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="Insert into NAF47.ARVTENCEMPLE&#xD;&#xA;   (NO_CIA, NO_DOCU, NO_EMPLE,  &#xD;&#xA;    AREA, DEPTO, DIVISION, ESTADO, IND_PAGO, NO_SECUENCIA,      &#xD;&#xA;    IND_CHEQUE, USER_ACTUALIZA,FECHA_ACTUALIZA,NO_TRANSA_RECIBO,FECHA, &#xD;&#xA;   CENTRO_COSTOS, IND_TARJETA)&#xD;&#xA; Values&#xD;&#xA;   (pNO_CIA, pNO_DOCU, cEMPLE.NO_EMPLE, &#xD;&#xA;    cEMPLE.AREA, cEMPLE.DEPTO, cEMPLE.DIVISION, 'A', 'S', TO_CHAR(SYSDATE,'RRRRMM'),      &#xD;&#xA;    'S', 'TARJETAS',SYSDATE,TO_CHAR(SYSDATE,'RRRRMM'),SYSDATE, &#xD;&#xA;   cEMPLE.CENTRO_COSTOS, 'S');">
+    <ui:ExecuteQuery ContinueOnError="{x:Null}" DataTable="{x:Null}" TimeoutMS="{x:Null}" CommandType="Text" DisplayName="Execute Query" ExistingDbConnection="[in_connection_db]" sap:VirtualizedContainerService.HintSize="334,88" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;Insert into NAF47.ARVTENCEMPLE  (NO_CIA, NO_DOCU, NO_EMPLE,   AREA, DEPTO, DIVISION, ESTADO, IND_PAGO, NO_SECUENCIA,  IND_CHEQUE, USER_ACTUALIZA,FECHA_ACTUALIZA,NO_TRANSA_RECIBO,FECHA, CENTRO_COSTOS, IND_TARJETA) Values  (pNO_CIA, consecutivo.VT(&quot;+in_pNO_CIA.ToString+&quot;, to_char(sysdate,'yyyy'), to_number(to_char(sysdate,'MM')),'01','V'), &quot;+in_NO_EMPLE.ToString+&quot;, &quot;+in_AREA.ToString+&quot;, &quot;+in_DEPTO.ToString+&quot;, &quot;+in_DIVISION.ToString+&quot;, 'A', 'S', TO_CHAR(SYSDATE,'RRRRMM'),' 'S', 'TARJETAS',SYSDATE,TO_CHAR(SYSDATE,'RRRRMM'),SYSDATE, &quot;+in_CENTRO_COSTOS.ToString+&quot;, 'S')&quot;]">
       <ui:ExecuteQuery.Parameters>
         <scg:Dictionary x:TypeArguments="x:String, Argument" />
       </ui:ExecuteQuery.Parameters>
